--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <div class="container">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
 </body>
 </html>
