--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
