Add div for computer selection

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
+    <div class="computer"></div>
     <div class="results"></div>
 </body>
 </html>
